# reef_estimator_2

./: Attitude_influence_to_B_matrix.m  CMakeLists.txt  layout_for debugging.xml  package.xml  reef2_hr.xml
config/: FULLlayout_for debugging.xml
include/: sensor_manager.h  sensor_manager.hpp  xy_estimator.h  xy_estimator.hpp  xyz_estimator.h
launch/: basic.launch  estimator_bag.launch  estimator_record.launch  verify_estimator.launch
params/: auk_camera.yaml  basic_params.yaml  kiwi_camera.yaml  xy_est_params.yaml  z_est_params.yaml
scripts/: online_histogram.py  verify_estimates.py
src/: sensor_manager.cpp  xy_estimator.cpp  xyz_estimator.cpp
