<?xml version="1.0"?>
<package format="2">
  <name>reef_estimator</name>
  <version>0.0.0</version>
  <description>The reef_estimator package</description>


  <maintainer email="prashant@todo.todo">prashant</maintainer>



  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>rosflight</depend>
  <depend>rosflight_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf_conversions</depend>
  <depend>reef_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
